background update, inshallah works

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,7 @@ body {
   font-family: "Publico", serif;
   color: rgb(var(--foreground-rgb));
   overflow-x: hidden;
-  background: linear-gradient(to bottom right, #1e1b4b, #3730a3, #1e40af);
-  background-attachment: fixed;
+  background-color: #060606;
 }
 
 #__next {
